day 2 - refactor